align fixed

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -207,9 +207,7 @@ main {
     margin: 0 auto;
 }
  
-.hello-content {
-    position: relative;
-}
+
 
 .hand-shake {
     position: absolute;
